--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "test_portfolio",
+  "homepage": "https://c7r7.github.io/charan_portfolio",
+
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,10 +23,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "sass": "^1.69.6"
   }
 }
